Fix OrderNumber again