@@ -23,6 +23,7 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class OrderServiceImpl implements OrderService {
+
     OrderRepository orderRepo;
     OrderItemRepository orderItemRepo;
     CartRepository cartRepo;
@@ -32,11 +33,10 @@ public class OrderServiceImpl implements OrderService {
 
     @Override
     public OrderResponse createOrderFromCart(String username, OrderRequest request) {
-        // 1. Get User from username
+
         User user = userRepo.findByUsername(username)
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
-        // 2. Validate Address belongs to User
         Address address = addressRepo.findById(request.getAddressId())
                 .orElseThrow(() -> new RuntimeException("Address not found"));
 
@@ -44,61 +44,53 @@ public class OrderServiceImpl implements OrderService {
             throw new RuntimeException("Address does not belong to user");
         }
 
-        // 3. Get Cart Items
         Cart cart = cartRepo.findByUser_Id(user.getId());
         if (cart == null || cart.getItems().isEmpty()) {
             throw new RuntimeException("Cart is empty");
         }
 
-        // 4. Lock stock & calculate total
         BigDecimal totalPrice = BigDecimal.ZERO;
-        for (CartItem cartItem : cart.getItems()) {
-            ProductVariant variant = cartItem.getProductVariant();
 
-            if (variant.getStockQuantity() < cartItem.getQuantity()) {
+        // LOCK STOCK
+        for (CartItem c : cart.getItems()) {
+            ProductVariant variant = c.getProductVariant();
+
+            if (variant.getStockQuantity() < c.getQuantity()) {
                 throw new RuntimeException("Insufficient stock for variant: " + variant.getId());
             }
 
-            variant.setStockQuantity(variant.getStockQuantity() - cartItem.getQuantity());
+            variant.setStockQuantity(variant.getStockQuantity() - c.getQuantity());
             variantRepo.save(variant);
 
-            totalPrice = totalPrice.add(cartItem.getUnitPrice().multiply(
-                    BigDecimal.valueOf(cartItem.getQuantity())
-            ));
+            totalPrice = totalPrice.add(
+                    c.getUnitPrice().multiply(BigDecimal.valueOf(c.getQuantity()))
+            );
         }
 
-        // 5. Create order
-        String orderNumber = "ORD" + System.currentTimeMillis();
         Order order = new Order();
         order.setUser(user);
         order.setAddress(address);
         order.setTotalPrice(totalPrice);
         order.setStatus(OrderStatus.PENDING);
-        order.setOrderNumber(orderNumber);
+        order.setOrderNumber("ORD" + System.currentTimeMillis());
         order.setNote(request.getNote());
         order.setCreatedAt(LocalDateTime.now());
         order.setUpdatedAt(LocalDateTime.now());
         orderRepo.save(order);
 
-        // 6. Create order items
         List<OrderItemResponse> itemResponses = cart.getItems().stream()
-                .map(cartItem -> {
-                    OrderItem orderItem = new OrderItem();
-                    orderItem.setOrder(order);
-                    orderItem.setProductVariant(cartItem.getProductVariant());
-                    orderItem.setQuantity(cartItem.getQuantity());
-                    orderItem.setUnitPrice(cartItem.getUnitPrice());
-                    orderItem.setSubtotalPrice(cartItem.getUnitPrice().multiply(
-                            BigDecimal.valueOf(cartItem.getQuantity())
-                    ));
-                    orderItem.setCreatedAt(LocalDateTime.now());
-                    orderItemRepo.save(orderItem);
+                .map(c -> {
+                    OrderItem item = new OrderItem();
+                    item.setOrder(order);
+                    item.setProductVariant(c.getProductVariant());
+                    item.setQuantity(c.getQuantity());
+                    item.setUnitPrice(c.getUnitPrice());
+                    item.setSubtotalPrice(c.getUnitPrice().multiply(BigDecimal.valueOf(c.getQuantity())));
+                    item.setCreatedAt(LocalDateTime.now());
+                    orderItemRepo.save(item);
+                    return toOrderItemResponse(item);
+                }).toList();
 
-                    return toOrderItemResponse(orderItem);
-                })
-                .collect(Collectors.toList());
-
-        // 7. Clear Cart
         cart.getItems().clear();
         cartRepo.save(cart);
 
@@ -107,16 +99,17 @@ public class OrderServiceImpl implements OrderService {
 
     @Override
     public List<OrderResponse> getUserOrders(String username) {
-        return orderRepo.findByUser_UsernameOrderByCreatedAtDesc(username).stream()
+        return orderRepo.findByUser_UsernameOrderByCreatedAtDesc(username)
+                .stream()
                 .map(order -> {
-                    Address address = order.getAddress();
                     List<OrderItemResponse> items = orderItemRepo.findByOrder_Id(order.getId())
                             .stream()
                             .map(this::toOrderItemResponse)
-                            .collect(Collectors.toList());
-                    return toOrderResponse(order, address, items);
+                            .toList();
+
+                    return toOrderResponse(order, order.getAddress(), items);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -136,14 +129,14 @@ public class OrderServiceImpl implements OrderService {
         List<OrderItemResponse> items = orderItemRepo.findByOrder_Id(orderId)
                 .stream()
                 .map(this::toOrderItemResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         return toOrderResponse(order, order.getAddress(), items);
     }
 
     @Override
     public void cancelOrder(String username, UUID orderId) {
-        // FIX: Validate user ownership
+
         User user = userRepo.findByUsername(username)
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
@@ -155,15 +148,15 @@ public class OrderServiceImpl implements OrderService {
         }
 
         if (order.getStatus() != OrderStatus.PENDING) {
-            throw new IllegalStateException("Can only cancel pending orders");
+            throw new RuntimeException("Only pending orders can be canceled");
         }
 
-        // Restore stock
         List<OrderItem> items = orderItemRepo.findByOrder_Id(orderId);
-        for (OrderItem item : items) {
-            ProductVariant variant = item.getProductVariant();
-            variant.setStockQuantity(variant.getStockQuantity() + item.getQuantity());
-            variantRepo.save(variant);
+
+        for (OrderItem i : items) {
+            ProductVariant v = i.getProductVariant();
+            v.setStockQuantity(v.getStockQuantity() + i.getQuantity());
+            variantRepo.save(v);
         }
 
         order.setStatus(OrderStatus.CANCELED);
@@ -198,9 +191,9 @@ public class OrderServiceImpl implements OrderService {
                 .id(item.getId())
                 .productName(product.getName())
                 .productImage(
-                        product.getImages().isEmpty()
-                            ? null
-                            :product.getImages().get(0).getImageUrl()
+                        product.getImages() != null && !product.getImages().isEmpty()
+                                ? product.getImages().get(0).getImageUrl()
+                                : null
                 )
                 .color(variant.getColor())
                 .size(variant.getSize())
